// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArrowFunctionExpression > client > should skip non-async server functions 1`] = `
{
  "code": "import { $$server as $$server_1 } from "my-example/server";
import { $$func as $$func_1 } from "my-example/runtime";
const example = /*@dismantle ref*/$$server_1(async () => {
  const source_1 = (await import("./example.ts?mode=client&my-example=0.ts")).default;
  return async (...rest_1) => {
    const [type_1, result_1] = await $$func_1(source_1, null)({
      l: [],
      m: []
    }, ...rest_1);
    return result_1;
  };
});",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-example");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";;AACM,MAAMA,OAAO,qBAAAC,UAAA;EAAA,MAAAC,QAAA,8DAAAC,OAAA;EAAA,iBAAAC,MAAA;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,CAAAL,QAAA;MAAAM,CAAA;MAAAC,CAAA;IAAA,MAAAL,MAAA;IAAA,OAAAE,QAAA;EAAA;AAAA,EAGZ",
    "names": [
      "example",
      "$$server_1",
      "source_1",
      "default",
      "rest_1",
      "type_1",
      "result_1",
      "$$func_1",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const example = () => {
        'use server';
        return 'foo bar';
      };
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`ArrowFunctionExpression > client > should skip top-level values for scope 1`] = `
{
  "code": "import { $$server as $$server_1 } from "my-example/server";
import { $$func as $$func_1 } from "my-example/runtime";
const value = 'foo bar';
const outer = () => {
  const example = /*@dismantle ref*/$$server_1(async () => {
    const source_1 = (await import("./example.ts?mode=client&my-example=0.ts")).default;
    return async (...rest_1) => {
      const [type_1, result_1] = await $$func_1(source_1, null)({
        l: [value],
        m: []
      }, ...rest_1);
      return result_1;
    };
  });
};",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-example");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";;AACM,MAAMA,KAAK,GAAG,SAAS;AACvB,MAAMC,KAAK,GAAGA,CAAA,KAAM;EAClB,MAAMC,OAAO,qBAAAC,UAAA;IAAA,MAAAC,QAAA,8DAAAC,OAAA;IAAA,iBAAAC,MAAA;MAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,CAAAL,QAAA;QAAAM,CAAA,GAFTV,KAAK;QAAAW,CAAA;MAAA,MAAAL,MAAA;MAAA,OAAAE,QAAA;IAAA;EAAA,EAKR;AACH,CAAC",
    "names": [
      "value",
      "outer",
      "example",
      "$$server_1",
      "source_1",
      "default",
      "rest_1",
      "type_1",
      "result_1",
      "$$func_1",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const value = 'foo bar';
      const outer = () => {
        const example = async () => {
          'use server';
          return value;
        };
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`ArrowFunctionExpression > client > should transform valid server functions 1`] = `
{
  "code": "import { $$server as $$server_1 } from "my-example/server";
import { $$func as $$func_1 } from "my-example/runtime";
const example = /*@dismantle ref*/$$server_1(async () => {
  const source_1 = (await import("./example.ts?mode=client&my-example=0.ts")).default;
  return async (...rest_1) => {
    const [type_1, result_1] = await $$func_1(source_1, null)({
      l: [],
      m: []
    }, ...rest_1);
    return result_1;
  };
});",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-example");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";;AACM,MAAMA,OAAO,qBAAAC,UAAA;EAAA,MAAAC,QAAA,8DAAAC,OAAA;EAAA,iBAAAC,MAAA;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,CAAAL,QAAA;MAAAM,CAAA;MAAAC,CAAA;IAAA,MAAAL,MAAA;IAAA,OAAAE,QAAA;EAAA;AAAA,EAGZ",
    "names": [
      "example",
      "$$server_1",
      "source_1",
      "default",
      "rest_1",
      "type_1",
      "result_1",
      "$$func_1",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const example = async () => {
        'use server';
        return 'foo bar';
      };
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`ArrowFunctionExpression > client > should transform valid server functions with scope 1`] = `
{
  "code": "import { $$server as $$server_1 } from "my-example/server";
import { $$func as $$func_1 } from "my-example/runtime";
const outer = () => {
  const value = 'foo bar';
  const example = /*@dismantle ref*/$$server_1(async () => {
    const source_1 = (await import("./example.ts?mode=client&my-example=0.ts")).default;
    return async (...rest_1) => {
      const [type_1, result_1] = await $$func_1(source_1, null)({
        l: [value],
        m: []
      }, ...rest_1);
      return result_1;
    };
  });
};",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-example");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";;AACM,MAAMA,KAAK,GAAGA,CAAA,KAAM;EAClB,MAAMC,KAAK,GAAG,SAAS;EACvB,MAAMC,OAAO,qBAAAC,UAAA;IAAA,MAAAC,QAAA,8DAAAC,OAAA;IAAA,iBAAAC,MAAA;MAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,CAAAL,QAAA;QAAAM,CAAA,GADPT,KAAK;QAAAU,CAAA;MAAA,MAAAL,MAAA;MAAA,OAAAE,QAAA;IAAA;EAAA,EAIV;AACH,CAAC",
    "names": [
      "outer",
      "value",
      "example",
      "$$server_1",
      "source_1",
      "default",
      "rest_1",
      "type_1",
      "result_1",
      "$$func_1",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const outer = () => {
        const value = 'foo bar';
        const example = async () => {
          'use server';
          return value;
        };
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`ArrowFunctionExpression > server > should skip non-async server functions 1`] = `
{
  "code": "import { $$server as $$server_1 } from "my-example/server";
import { $$func as $$func_1 } from "my-example/runtime";
const example = /*@dismantle ref*/$$server_1(async () => {
  const source_1 = (await import("./example.ts?mode=server&my-example=1.ts")).default;
  return async (...rest_1) => {
    const [type_1, result_1] = await $$func_1(source_1, null)({
      l: [],
      m: []
    }, ...rest_1);
    return result_1;
  };
});",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$context as $$context_1 } from "my-example/runtime";
export default () => {
  const ctx_1 = $$context_1();
  {
    return 'foo bar';
  }
};",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;EAC4B;IAEpB,OAAO,SAAS;EAClB;AAAC",
        "names": [],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
import { $$wrapFunction as wrapper } from "my-example/runtime";
export default entry("26ecc3a5-0-example", wrapper(root));",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";;AACM,MAAMA,OAAO,qBAAAC,UAAA;EAAA,MAAAC,QAAA,8DAAAC,OAAA;EAAA,iBAAAC,MAAA;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,CAAAL,QAAA;MAAAM,CAAA;MAAAC,CAAA;IAAA,MAAAL,MAAA;IAAA,OAAAE,QAAA;EAAA;AAAA,EAGZ",
    "names": [
      "example",
      "$$server_1",
      "source_1",
      "default",
      "rest_1",
      "type_1",
      "result_1",
      "$$func_1",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const example = () => {
        'use server';
        return 'foo bar';
      };
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;

exports[`ArrowFunctionExpression > server > should skip top-level values for scope 1`] = `
{
  "code": "import { $$server as $$server_1 } from "my-example/server";
import { $$func as $$func_1 } from "my-example/runtime";
const value = 'foo bar';
const outer = () => {
  const example = /*@dismantle ref*/$$server_1(async () => {
    const source_1 = (await import("./example.ts?mode=server&my-example=1.ts")).default;
    return async (...rest_1) => {
      const [type_1, result_1] = await $$func_1(source_1, null)({
        l: [value],
        m: []
      }, ...rest_1);
      return result_1;
    };
  });
};",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$context as $$context_1 } from "my-example/runtime";
export default async () => {
  const ctx_1 = $$context_1();
  {
    return ctx_1.l[0];
  }
};",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;EAGoC;IAE1B,OAAAA,KAAA,CAAAC,CAAA;EACF;AAAC",
        "names": [
          "ctx_1",
          "l",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
import { $$wrapFunction as wrapper } from "my-example/runtime";
export default entry("26ecc3a5-0-example", wrapper(root));",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";;AACM,MAAMA,KAAK,GAAG,SAAS;AACvB,MAAMC,KAAK,GAAGA,CAAA,KAAM;EAClB,MAAMC,OAAO,qBAAAC,UAAA;IAAA,MAAAC,QAAA,8DAAAC,OAAA;IAAA,iBAAAC,MAAA;MAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,CAAAL,QAAA;QAAAM,CAAA,GAFTV,KAAK;QAAAW,CAAA;MAAA,MAAAL,MAAA;MAAA,OAAAE,QAAA;IAAA;EAAA,EAKR;AACH,CAAC",
    "names": [
      "value",
      "outer",
      "example",
      "$$server_1",
      "source_1",
      "default",
      "rest_1",
      "type_1",
      "result_1",
      "$$func_1",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const value = 'foo bar';
      const outer = () => {
        const example = async () => {
          'use server';
          return value;
        };
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;

exports[`ArrowFunctionExpression > server > should transform valid server functions 1`] = `
{
  "code": "import { $$server as $$server_1 } from "my-example/server";
import { $$func as $$func_1 } from "my-example/runtime";
const example = /*@dismantle ref*/$$server_1(async () => {
  const source_1 = (await import("./example.ts?mode=server&my-example=1.ts")).default;
  return async (...rest_1) => {
    const [type_1, result_1] = await $$func_1(source_1, null)({
      l: [],
      m: []
    }, ...rest_1);
    return result_1;
  };
});",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$context as $$context_1 } from "my-example/runtime";
export default async () => {
  const ctx_1 = $$context_1();
  {
    return 'foo bar';
  }
};",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;EACkC;IAE1B,OAAO,SAAS;EAClB;AAAC",
        "names": [],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
import { $$wrapFunction as wrapper } from "my-example/runtime";
export default entry("26ecc3a5-0-example", wrapper(root));",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";;AACM,MAAMA,OAAO,qBAAAC,UAAA;EAAA,MAAAC,QAAA,8DAAAC,OAAA;EAAA,iBAAAC,MAAA;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,CAAAL,QAAA;MAAAM,CAAA;MAAAC,CAAA;IAAA,MAAAL,MAAA;IAAA,OAAAE,QAAA;EAAA;AAAA,EAGZ",
    "names": [
      "example",
      "$$server_1",
      "source_1",
      "default",
      "rest_1",
      "type_1",
      "result_1",
      "$$func_1",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const example = async () => {
        'use server';
        return 'foo bar';
      };
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;

exports[`ArrowFunctionExpression > server > should transform valid server functions with scope 1`] = `
{
  "code": "import { $$server as $$server_1 } from "my-example/server";
import { $$func as $$func_1 } from "my-example/runtime";
const outer = () => {
  const value = 'foo bar';
  const example = /*@dismantle ref*/$$server_1(async () => {
    const source_1 = (await import("./example.ts?mode=server&my-example=1.ts")).default;
    return async (...rest_1) => {
      const [type_1, result_1] = await $$func_1(source_1, null)({
        l: [value],
        m: []
      }, ...rest_1);
      return result_1;
    };
  });
};",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$context as $$context_1 } from "my-example/runtime";
export default async () => {
  const ctx_1 = $$context_1();
  {
    return ctx_1.l[0];
  }
};",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;EAGoC;IAE1B,OAAAA,KAAA,CAAAC,CAAA;EACF;AAAC",
        "names": [
          "ctx_1",
          "l",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
import { $$wrapFunction as wrapper } from "my-example/runtime";
export default entry("26ecc3a5-0-example", wrapper(root));",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";;AACM,MAAMA,KAAK,GAAGA,CAAA,KAAM;EAClB,MAAMC,KAAK,GAAG,SAAS;EACvB,MAAMC,OAAO,qBAAAC,UAAA;IAAA,MAAAC,QAAA,8DAAAC,OAAA;IAAA,iBAAAC,MAAA;MAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,CAAAL,QAAA;QAAAM,CAAA,GADPT,KAAK;QAAAU,CAAA;MAAA,MAAAL,MAAA;MAAA,OAAAE,QAAA;IAAA;EAAA,EAIV;AACH,CAAC",
    "names": [
      "outer",
      "value",
      "example",
      "$$server_1",
      "source_1",
      "default",
      "rest_1",
      "type_1",
      "result_1",
      "$$func_1",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const outer = () => {
        const value = 'foo bar';
        const example = async () => {
          'use server';
          return value;
        };
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;
